Fix last dark mode issue

--- a/popup-styles.css
+++ b/popup-styles.css
@@ -14,6 +14,9 @@
     --dark: rgb(10, 10, 10);
     --elevation: rgb(0 0 0 / 25%);
     --elevation-dark: rgb(255 255 255 / 25%);
+    --secondary-surface: white;
+    --secondary-surface-lower: rgb(226, 226, 226);
+    --secondary-surface-lowest: rgb(209, 209, 209);
 
     --accent: var(--green);
     --disabled-accent: var(--red);
@@ -29,6 +32,9 @@
         --surface: var(--dark);
         --color: white;
         --box-shadow: var(--elevation-dark);
+        --secondary-surface: rgb(14, 14, 14);
+        --secondary-surface-lower: rgb(32, 32, 32);
+        --secondary-surface-lowest: rgb(59, 59, 59);
     }
 }
 
@@ -56,7 +62,7 @@ button {
     appearance: none;
     border-radius: 5px;
     font-size: 16px;
-    background-color: transparent;
+    background-color: var(--secondary-surface);
     cursor: pointer;
     padding: 6px 8px;
     border: 1px solid gray;
@@ -66,11 +72,11 @@ button {
 }
 
 button:hover {
-    background-color: rgb(226, 226, 226);
+    background-color: var(--secondary-surface-lower);
 }
 
 button:active {
-    background-color: rgb(209, 209, 209);
+    background-color: var(--secondary-surface-lowest);
 }
 
 summary {
@@ -85,6 +91,8 @@ input[type='text'] {
     padding: 7px 13px;
     border: 1px solid gray;
     font-size: 1rem;
+    color: var(--color);
+    background-color: var(--secondary-surface);
 }
 
 input[type='color'] {
